<resources>
    <string name="app_name">FastS</string>
    <string name="logout">Logout</string>
    <string name="today">Today</string>
    <string name="email_address">Email address</string>
    <string name="pin">Pin</string>
    <string name="login">Login</string>
    <string name="provide_data">Please enter all your credetials correctly.</string>
    <string name="mapit">MapIt</string>
    <string name="select_status">Select status</string>
    <string name="cancel">Cancel</string>
    <string name="cant_change_status">Can\'t change status</string>
    <string name="welcome">Welcome! You have %1$s appointments for today %2$s</string>
    <string name="go_to_previous_screen">Go to previous screen</string>
    <string name="large">Large:</string>
    <string name="small">Small:</string>
    <string name="the_total_reward">The total reward ammount can NOT exceed $130.00 dollars</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_description">Product description:</string>
    <string name="reject_reason">Reject reason:</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="or_enter_invoice_id">or enter invoice id</string>
    <string name="configuration">Configuration</string>
    <string name="appliance_upload_photo">Appliance (Upload photo)</string>
    <string name="brand">Brand</string>
    <string name="unit_age">Unit age</string>
    <string name="unit_size">Unit size</string>
    <string name="damage">Damage?</string>
    <string name="add_fields">Add fields</string>
</resources>
