<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.softrangers.fastr.ui.SubmitActivity">

    <RelativeLayout
        android:id="@+id/submitToolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageButton
            android:id="@+id/submitBackButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/Base.Widget.AppCompat.ActionButton"
            android:background="?selectableItemBackground"
            android:layout_centerVertical="true"
            android:src="@mipmap/btn_back"
            android:contentDescription="@string/go_to_previous_screen"/>

        <ImageView
            android:id="@+id/submitToolbarLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="centerInside"
            android:src="@drawable/fastimage"
            android:contentDescription="@string/app_name"/>
    </RelativeLayout>

    <View
        android:id="@+id/submitToolbarSeparator"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorAccent"
        android:layout_below="@id/submitToolBar"/>

    <TextView
        android:id="@+id/submitLargeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/submitToolbarSeparator"
        android:text="@string/large"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/submitLargeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/submitLargeTitle"
        android:layout_toEndOf="@id/submitLargeTitle"
        android:layout_alignBottom="@id/submitLargeTitle"
        tools:text="1"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/submitSmallTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@id/submitLargeTitle"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/small"/>

    <TextView
        android:id="@+id/submitSmallLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/submitSmallTitle"
        android:layout_toEndOf="@id/submitSmallTitle"
        android:layout_alignBottom="@id/submitSmallTitle"
        tools:text="0"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/submitRewardInfoLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/submitLargeTitle"
        android:textColor="@color/colorAccent"
        android:text="@string/the_total_reward"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit ="marquee_forever"
        android:focusable="true"
        android:layout_marginBottom="5dp"
        android:focusableInTouchMode="true"
        android:scrollHorizontally="true"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"/>

    <View
        android:id="@+id/constantLayoutSeparator"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/submitRewardInfoLabel"
        android:background="@color/colorAccent"/>

    <Button
        android:id="@+id/submitButton"
        android:textColor="@android:color/white"
        android:text="@string/submit"
        style="@style/Base.Widget.AppCompat.ActionButton"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/submitFieldsPager"
        android:layout_above="@id/submitButton"
        android:layout_below="@id/constantLayoutSeparator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.design.widget.TabLayout
        android:layout_above="@id/submitButton"
        android:id="@+id/tabDots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabBackground="@drawable/tab_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"/>
</RelativeLayout>
