<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.softrangers.fastr.ui.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:scaleType="centerInside"
        android:layout_margin="16dp"
        android:src="@drawable/fastimage"/>

    <LinearLayout
        android:id="@+id/inputsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailAddressInput"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="40dp"
            android:hint="@string/email_address"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_bbg"/>

        <EditText
            android:id="@+id/pinInput"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/pin"
            android:background="@drawable/edit_text_bbg"/>
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="64dp"
        android:layout_marginLeft="64dp"
        style="@style/Base.Widget.AppCompat.ActionButton"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_below="@id/inputsLayout"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_corner_btn_accent"/>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/loginButton"/>
</RelativeLayout>
